--- a/frontend/src/components/Button.css
+++ b/frontend/src/components/Button.css
@@ -1,27 +1,24 @@
 :root {
-    --primary-color: #1888ff; /* Green */
-    --secondary-color: #f1f1f1; /* Light Gray */
-    --text-color: #333; /* Dark Gray */
-    --button-hover-color: #45a049; /* Darker Green */
+  --primary: #1888ff;
 }
 
 .btn {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    outline: none;
-
+  padding: 8px 20px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background-color: var(--primary);
 }
 
 .btn:hover {
-    background-color: var(--button-hover-color);
-    padding: 10px 22px;
-    transition: background-color 0.3s ease, padding 0.3s ease;
-    border-radius: 5px;
-    border: 2px solid var(--primary-color);
-    color: white;
+  padding: 6px 18px;
+  transition: all 0.3s ease-out;
+  background-color: transparent;
+  color: #fff;
+  border-radius: 4px;
+  border: 2px solid var(--primary);
+  transition: all 0.3s ease-out;
 }
