--- a/frontend/src/components/Dropdown.css
+++ b/frontend/src/components/Dropdown.css
@@ -1,30 +1,36 @@
 .dropdown-menu {
-    width: 200px;
-    position: absolute;
-    top: 100%;
-    list-style: none;
-    text-align: start;
+  background: red;
+  width: 200px;
+  position: absolute;
+  top: 80px;
+  list-style: none;
+  text-align: start;
 }
 
 .dropdown-menu li {
-    background: #1888ff;
-    cursor: pointer;
+  background: #1888ff;
+  cursor: pointer;
 }
 
 .dropdown-menu li:hover {
-    background: #5cabff;
+  background: #5cabff;
 }
 
 .dropdown-menu.clicked {
-    display: none;
+  display: none;
 }
 
 .dropdown-link {
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    display: block;
-    width: 100%;
-    height: 100%;
-    
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  color: #fff;
+  padding: 16px;
+}
+
+@media screen and (max-width: 960px) {
+  .fa-caret-down {
+    display: none;
+  }
 }
